[package]
name = "graceful-tokio-shutdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-graceful-shutdown = "0.15.1"
tokio-util = { version = "0.7.12", features = ["full"] }
